update to work with the Banco de Guatemala WebS

--- a/prj_tipo_cambio/templates/show.html
+++ b/prj_tipo_cambio/templates/show.html
@@ -13,12 +13,13 @@
         <tr>
             <th>Id</th>
             <th>Fecha</th>
-            <th>Tipo de Cambio</th>
+            <th>Venta</th>
+            <th>Compra</th>
             <th>Editar / Borrar</th>
         </tr>
         {{ tipos_de_cambio | safe }}
         <tr>
-            <td colspan="4"><a href="../add/">Agregar Nuevo</a></td>
+            <td colspan="5"><a href="../add/">Agregar Nuevo</a></td>
         </tr>
     </table>
 </div>
